# pe-tools

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: build.yml
inc/pe/: coff_header.h  dll_finder.h  error.h  reader.h  types.h
inc/pe_tools/: coff_header.hpp  dll_finder.hpp  known_dlls.hpp  optional_header.hpp  pe_file.hpp  section_header.hpp
lib/pe/: buffer_reader.c  buffer_reader.h  coff_header.h  dll_finder.c  dll_finder.h  error.c  error.h  error_intern.h  known_dlls.c  known_dlls.h  reader.c  reader.h  section_header.h  types.h
lib/pe_tools/: dll_finder.cpp  file_reader.cpp  file_reader.hpp  image_data_directory.hpp  import_dir_entry.hpp  known_dlls.cpp  pe_file.cpp
lib/test/: test.c  test.h
lib/util/: args.c  args.h  cli.c  cli.h  heap.c  heap.h  panic.c  panic.h  print.c  print.h  str.c  str.h  str_builder.c  str_builder.h  str_stack.c  str_stack.h
src/: dll_finder.c  pe_depends.c  pe_depends.cpp  pe_info.c  pe_info.cpp  string_set.h  version.h.in
src/pe_depends_static/: dll_imports.c  dll_imports.h  file_reader.c  file_reader.h  main.c  status.h
test-src/: alltests.c  alltests.h
test-src/pe/: test_buffer_reader.c  test_error.c
test-src/util/: test_args.c  test_cli.c  test_heap.c  test_str.c  test_str_array.c  test_str_builder.c
